syntax = "proto3";

package kz.paspay.paspayfileworker.grpc;

option java_outer_classname = "FileworkerProto";

service FileworkerService {
  rpc saveFileFromBytes (SaveFileRequest) returns (Response);
}

message Response {
  int64 code = 1;
  string message = 2;
  string data = 3;
}

message SaveFileRequest {
  string fileName = 1;
  string bucketName = 2;
  string requestId = 3;
  bytes fileBytes = 4;
}